--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -1,3 +1,44 @@
-.blue {
-    background-color: teal;
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+}
+nav.navigation.desktop {
+    display: none;
+    flex: 1;
+    max-width: 600px;
+
+    ul {
+        display: flex;
+        justify-content: space-between;
+        flex: 1;
+        li {
+            ul {
+                display: flex;
+                transition: all 0.3s;
+                position: absolute;
+                flex-direction: column;
+                visibility: hidden;
+                opacity: 0;
+            }
+        }
+        
+        li:hover {
+            ul {
+                visibility: visible;
+                opacity: 1;
+            }
+        ul:hover {
+            display: flex;
+            }
+        }
+    }
+}
+@media (min-width: 769px) {
+    nav.navigation.mobile {
+        display: none;
+    }
+    nav.navigation.desktop {
+        display: block;
+    }
 }
