--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -54,6 +54,7 @@ nav.navigation.desktop {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around; 
 }
 
 .show {
@@ -65,6 +66,9 @@ nav.navigation.desktop {
 }
 
 @media (min-width: 769px) {
+    .menuIcon {
+        display: none;
+    }
     .header {
         flex-direction: row;
     }
