--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -4,6 +4,11 @@
     justify-content: space-between;
     padding: 1rem;
 }
+
+.header.absolute {
+    position: absolute;
+    width: 100%;
+}
 nav.navigation.desktop {
     display: none;
     flex: 1;
