--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,6 +1,15 @@
 .titleSlide {
+    position: relative;
     top: 0;
-    height: 80vh;
+    height: 90vh;
     width: 100%;
     background-position: center;
+}
+.title {
+    position: absolute;
+    left: 6%;
+    bottom: 13%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
