--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -234,10 +234,23 @@ h1 {
   font-family: Helvetica, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 2.25rem;
   line-height: 1.1;
 }
 h2 {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  margin-bottom: 1rem;
+  color: $grey;
+  font-family: Helvetica, sans-serif;
+  text-rendering: optimizeLegibility;
+  line-height: 1.1;
+}
+h3 {
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
@@ -250,24 +263,9 @@ h2 {
   font-family: Helvetica, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1.62671rem;
+  font-size: 18px;
   line-height: 1.1;
-}
-h3 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-  color: inherit;
-  font-family: Helvetica, sans-serif;
-  font-weight: bold;
-  text-rendering: optimizeLegibility;
-  font-size: 1.38316rem;
-  line-height: 1.1;
+  text-transform: uppercase;
 }
 h4 {
   margin-left: 0;
@@ -403,6 +401,11 @@ pre {
   overflow: auto;
   word-wrap: normal;
   padding: 1.45rem;
+}
+span {
+  font-size: 14px;
+  line-height: 1.1;
+  color: $grey;
 }
 table {
   margin-left: 0;
