--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -13,3 +13,23 @@
     flex-direction: column;
     align-items: center;
 }
+
+.currentWork {
+    max-width: 1200px;
+    margin: 5rem auto;
+    h1 {
+        margin-left: 2rem;
+    }
+    .recentPosts {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 744px) {
+    .recentPosts {
+        flex-direction: column;
+        align-items: center;
+    }
+}
