--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -292,7 +292,7 @@ h5 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
+  color: $grey;
   font-family: Helvetica, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
