feat: homepage is ready

--- a/src/styles/Button.module.scss
+++ b/src/styles/Button.module.scss
@@ -1,8 +1,13 @@
 .container{
+    cursor: pointer;
     background: none;
     border: none;
     text-decoration: underline; 
     h5 {
         font-weight: 400;
     }
+}
+
+.container:focus {
+    outline: none;
 }
