--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -27,7 +27,7 @@
         flex-wrap: wrap;
     }
 }
-.categories {
+.categoriesWrap {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,8 +37,17 @@
         width: 0;
         margin: 0 auto;
         border: solid 0.5px $grey;
+        transform: scaleY(15px)
     }
-
+    .categories {
+        animation: fadeInDown 0.5s;
+    }
+    .categories.hide {
+        display: none;
+    }
+    .categories.show {
+        display: block;
+    }
     .options {
         width: 100%;
         max-width: 1000px;
