--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,1 +1,12 @@
 $grey:  #646464;
+
+@keyframes fadeInDown{
+    from {
+        transfrom: translateY(-15px);
+        opacity: 0;
+    }
+    to {
+        transfrom: translateY(0);
+        opacity: 1;
+    }
+}
