--- a/src/styles/PostPreview.module.scss
+++ b/src/styles/PostPreview.module.scss
@@ -1,7 +1,6 @@
 .container {
-    min-width: 250px;
-    max-width: 300px;
-    margin: 0 2rem;
+    width: 250px;
+    margin: 2rem 2rem;
     .image {
         width: 100%;
         padding-top: 100%;
