fix: header sizes

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -20,7 +20,7 @@
                 text-decoration: none;
             }
             list-style: none;
-
+            font-size: 0.8rem;
         }
         
         li:hover {
