--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -4,7 +4,8 @@
     top: 0;
     height: 90vh;
     width: 100%;
-    background-position: center;
+    background-position: left;
+    background-size: cover;
 }
 .title {
     position: absolute;
