--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -453,6 +453,13 @@ form {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
+footer {
+  font-size: 13px;
+  color: $grey;
+  text-align: center;
+  margin: 1rem 0;
+
+}
 noscript {
   margin-left: 0;
   margin-right: 0;
