--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -57,7 +57,7 @@
     font-size: 1.4rem;
     font-weight: 700;
     line-height: 1;
-    color: red;
+    color: blue;
     opacity: .3;
     cursor: pointer;
     border: none;
