--- a/src/styles/Project.module.scss
+++ b/src/styles/Project.module.scss
@@ -1,3 +1,4 @@
+@import '_constants';
 .project {
     margin: 2rem auto;
     max-width: 1500px;
@@ -43,8 +44,10 @@
 
 .lightboxContainer {
     .navIcon {
-        font-size: 20px;
+        font-size: 30px;
+        color: $grey;
         cursor: pointer;
+        opacity: .8;
     }
     width: 100%;
     padding: 0 2rem;
