fix: header second level background

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -3,6 +3,9 @@
 .white {
     color: white;
 }
+.whiteBackground {
+    background: white;
+}
 .header {
     display: flex;
     flex-direction: column;
