fix: no underline on post titles preview

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -16,6 +16,7 @@
         .logo {
             a {
                 color: $grey;
+                text-decoration: none;
             }
         }
     }
