--- a/src/styles/PostPreview.module.scss
+++ b/src/styles/PostPreview.module.scss
@@ -3,9 +3,7 @@
     margin: 2rem 2rem;
     .image {
         width: 100%;
-        padding-top: 100%;
-        background-size: cover;
-        background-position:center;
+        height: 100%;
     }
     h3 {
         margin-top: 1rem;
