--- a/src/styles/Project.module.scss
+++ b/src/styles/Project.module.scss
@@ -3,20 +3,25 @@
     margin: 2rem auto;
     max-width: 1500px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    .mobileTitle {
+        align-self: center;
+        border: solid 1px $grey;
+        padding: 1rem;
+    }
     .visual {
-        width: 60%;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
         align-items: center;
         .videoWrap {
             width: 100%;
-            height: 100%*9/16;
+            height: 100% * 9/16;
             margin: 0 1rem;
         }
         .thumbWrap {
-            width: 30%;
+            width: 32%;
             cursor: pointer;
             background: transparent;
         }
@@ -33,11 +38,14 @@
             }
         }
     }
-
+    
     .reading {
-        width: 40%;
         margin: 0 1rem;
     }
+}
+
+.desktopTitle {
+    display: none;
 }
 
 .lightboxContainer {
@@ -52,4 +60,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media (min-width: 769px) {
+    .project {
+        flex-direction: row;
+        
+        .mobileTitle {
+            display: none;
+        }
+        
+        .desktopTitle {
+            display: block;
+        }
+    }
+    .visual {
+        width: 60%;
+    }
+    .reading {
+        width: 40%;
+    }
 }
