--- a/src/styles/Project.module.scss
+++ b/src/styles/Project.module.scss
@@ -1,4 +1,8 @@
 @import '_constants';
+.image {    
+    width: 70%;
+    margin: 0 3.5rem 3.5rem 3.5rem;
+}
 .project {
     margin: 2rem auto;
     max-width: 1500px;
