--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -14,6 +14,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    h1 {
+        font-size: 60px;
+    }
 }
 
 @media (max-width: 744px) {
