--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -13,6 +13,8 @@
     justify-content: space-between;
     padding: 1rem;
     z-index: 1;
+    max-width: 1300px;
+    margin: 0 auto;
     .headerTop {
         .menuIcon {
             margin-top: 0.46rem;
@@ -57,6 +59,7 @@
 .header.home {
     position: absolute;
     width: 100%;
+    max-width: 2000px;
     .logo {
         color: white;
     }
